next release 1.11
#################

2011-04-17  Ales Cepek  <cepek@biggy>

	* SVD class (matvec/svd.h) internal data members and variables
	declared volatile to suppress g++ optimization

2011-04-12  Ales Cepek  <cepek@gnu.org>

	* added Spanish translation of *.lang files supplied by Jokin
	Zurutuza <zurutuza@ujaen.es>

	* fixed a minor bug in formatting of adjustment general
	parameters (general_parameters.h)

2011-03-30  Ales Cepek  <cepek@gnu.org>

	* first draft of string functions Utf8::length() and Utf8::leftPad()

2011-03-18  Vaclav Petras <vaclav.petras@fsv.cvut.cz>

	* added a new class SqliteReader for access to sqlite3 databases for
          gama-local adjustment program

2011-03-17  Ales Cepek  <cepek@gnu.org>

	* description added as a public atribute to the LocalNetwork class

2011-02-25  Ales Cepek  <cepek@gnu.org>

	* redefined the tree structure of GNU Gama exception classes to
	have a common base class GNU_gama::Exception::base (derived from
	std::exceptions). Removed classes GNU_gama::local::Exception,
	GNU_gama::local::ParserException and
	GNU_gama::local::MatVecException are only typedefs to
	GNU_gama::Exception::string, GNU_gama::Exception::parser and
	GNU_gama::Exception::matvec respectively.

	* added virtual functions clone() and raise() to all exceptions

2010-09-27  Jiri Novak  <jiri.novak@petriny.net>

	* a patch by Jiri Novak for xml/gama-local-schema.sql and Gkf2sql
          class to be compatible with Oracle XE 10g, PostgreSQL 8.4,
	  MySQL 5.1.7 (also suggested by Vaclav Petras) and Sqlite3.

2010-09-10  Ales Cepek  <cepek@gnu.org>

	* added a new class Gkf2sql and a new program gama-local-xml2sql
	* added SQL DB schema xml/gama-local-schema.sql

	Tested with sqlite3 3.7.2 and postgresql 8.4.4-2

2010-08-13  Ales Cepek  <cepek@gnu.org>

	* all calls to typeid() replaced by dynamic_cast<>()
	* all CVS $Id: comments deleted
	* directory structure simplified to a single tree
	* namespace GaMaLib renamed to GNU_gama::local